Audio generation succsefully implemented